# milkweed

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  CLAUDE.md  README.md  TODO.md  app.py  cloudbuild.yaml  docker-compose.yml  firebase.json  firebase.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/: styles.css
components/: investment_upload.py  navbar.py  sidebar.py
core/models/: __init__.py  business.py  core.py  healthcare.py  household.py  individual.py  portfolio.py  retirement.py  session.py  transactions.py
core/services/: firebase.py  forecast.py  investments.py  monarch.py  projection.py  retirement.py  returns.py  trends.py
core/utils/: functions.py  trends_charts.py
pages/: actuals.py  budget.py  csp.py  forecast.py  investments.py  profile.py  retirement.py  settings.py  trends.py
scripts/: delete_investment_data.py  download_config.py  download_monarch.py  migrate_config.py  migrate_profile_to_prod.py  migrate_savings_to_shrinking.py  migrate_shrinking_to_sinking.py  migrate_transactions.py  process_transactions.py  seed_emulator.py  seed_profile.py  seed_retirement_config.py  test_downloads.py  verify_balance_projector.py  verify_cost_basis.py  verify_healthcare.py  verify_lifetime_engine.py  verify_ss_estimator.py
