[project]
name = "milkweed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2025.10.5",
    "cpi>=2.0.8",
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.2",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "firebase-admin>=7.1.0",
    "gql",
    "gunicorn>=23.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "monarchmoneycommunity>=1.3.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "yfinance>=0.2.66",
]
